[gd_scene load_steps=19 format=4 uid="uid://ckoht4qkxdt0j"]

[ext_resource type="Texture2D" uid="uid://c20nwcccdn2u6" path="res://assets/kenney_tiny-battle (1)/Tilemap/tilemap_packed.png" id="1_80nbo"]
[ext_resource type="Script" uid="uid://x0amttthh0ke" path="res://game.gd" id="1_fc0e3"]
[ext_resource type="PackedScene" uid="uid://c5lxkh4l5n80c" path="res://scenes/frog.tscn" id="2_e2o6t"]
[ext_resource type="Script" uid="uid://bdh5seuwbcxgf" path="res://markers.gd" id="5_7jktm"]
[ext_resource type="Script" uid="uid://c44w3jgykvb8i" path="res://game_manager.gd" id="5_ryrav"]
[ext_resource type="Script" uid="uid://ckshxko1kxoys" path="res://ui.gd" id="6_ryrav"]
[ext_resource type="AudioStream" uid="uid://ce2j1jwpyxsni" path="res://sounds/kenney_music-jingles/Audio/Steel jingles/jingles_STEEL02.ogg" id="7_eow3j"]
[ext_resource type="Texture2D" uid="uid://qegmsdaf40ae" path="res://assets/frog_spritesheets/frog_green_spritesheet.png" id="7_j5wjh"]
[ext_resource type="Theme" uid="uid://o2x3ngb53j02" path="res://themes/new_theme.tres" id="7_vef74"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e2o6t"]
texture = ExtResource("1_80nbo")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
0:6/0/terrain_set = 0
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrains_peering_bit/right_side = 0
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrains_peering_bit/right_side = 0
2:6/0/terrains_peering_bit/left_side = 0
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrains_peering_bit/left_side = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
0:7/0/terrain_set = 0
0:7/0/terrains_peering_bit/bottom_side = 0
1:7/0 = 0
1:7/0/terrain_set = 0
1:7/0/terrains_peering_bit/right_side = 0
1:7/0/terrains_peering_bit/bottom_side = 0
2:7/0 = 0
2:7/0/terrain_set = 0
2:7/0/terrains_peering_bit/right_side = 0
2:7/0/terrains_peering_bit/bottom_side = 0
2:7/0/terrains_peering_bit/left_side = 0
3:7/0 = 0
3:7/0/terrain_set = 0
3:7/0/terrains_peering_bit/bottom_side = 0
3:7/0/terrains_peering_bit/left_side = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
0:8/0/terrain_set = 0
0:8/0/terrains_peering_bit/bottom_side = 0
0:8/0/terrains_peering_bit/top_side = 0
1:8/0 = 0
1:8/0/terrain_set = 0
1:8/0/terrains_peering_bit/right_side = 0
1:8/0/terrains_peering_bit/bottom_side = 0
1:8/0/terrains_peering_bit/top_side = 0
2:8/0 = 0
2:8/0/terrain_set = 0
2:8/0/terrains_peering_bit/right_side = 0
2:8/0/terrains_peering_bit/bottom_side = 0
2:8/0/terrains_peering_bit/left_side = 0
2:8/0/terrains_peering_bit/top_side = 0
3:8/0 = 0
3:8/0/terrain_set = 0
3:8/0/terrains_peering_bit/bottom_side = 0
3:8/0/terrains_peering_bit/left_side = 0
3:8/0/terrains_peering_bit/top_side = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
0:9/0/terrain_set = 0
0:9/0/terrains_peering_bit/top_side = 0
1:9/0 = 0
1:9/0/terrain_set = 0
1:9/0/terrains_peering_bit/right_side = 0
1:9/0/terrains_peering_bit/top_side = 0
2:9/0 = 0
2:9/0/terrain_set = 0
2:9/0/terrains_peering_bit/right_side = 0
2:9/0/terrains_peering_bit/left_side = 0
2:9/0/terrains_peering_bit/top_side = 0
3:9/0 = 0
3:9/0/terrain_set = 0
3:9/0/terrains_peering_bit/left_side = 0
3:9/0/terrains_peering_bit/top_side = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0

[sub_resource type="TileSet" id="TileSet_feb5d"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Road"
terrain_set_0/terrain_0/color = Color(0.681175, 0.122039, 0.32446, 1)
terrain_set_0/terrain_1/name = "Water"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_e2o6t")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jktm"]
size = Vector2(66, 281)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryrav"]
size = Vector2(29, 266)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eow3j"]
size = Vector2(496, 98)

[sub_resource type="AtlasTexture" id="AtlasTexture_vef74"]
atlas = ExtResource("7_j5wjh")
region = Rect2(0, 0, 32.5, 32.25)

[sub_resource type="Animation" id="Animation_vef74"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/LevelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_j5wjh"]
resource_name = "Level"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/LevelContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hve3p"]
_data = {
&"RESET": SubResource("Animation_vef74"),
&"level": SubResource("Animation_j5wjh")
}

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fc0e3")

[node name="Map" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAeAAwAAQACAAYAAAAdAAwAAQACAAYAAAAcAAwAAQACAAYAAAAbAAwAAQACAAYAAAAaAAwAAQACAAYAAAAZAAwAAQACAAYAAAAYAAwAAQACAAYAAAAXAAwAAQACAAYAAAAWAAwAAQACAAYAAAAVAAwAAQACAAYAAAAUAAwAAQACAAYAAAATAAwAAQACAAYAAAASAAwAAQACAAYAAAARAAwAAQACAAYAAAAQAAwAAQACAAYAAAAPAAwAAQACAAYAAAAOAAwAAQACAAYAAAANAAwAAQACAAYAAAAMAAwAAQACAAYAAAALAAwAAQACAAYAAAAKAAwAAQACAAYAAAAJAAwAAQACAAYAAAAIAAwAAQACAAYAAAAHAAwAAQACAAYAAAAGAAwAAQACAAYAAAAFAAwAAQACAAYAAAAEAAwAAQACAAYAAAADAAwAAQACAAYAAAACAAwAAQACAAYAAAABAAwAAQACAAYAAAAAAAwAAQACAAYAAAAeAAsAAQACAAYAAAAdAAsAAQACAAYAAAAcAAsAAQACAAYAAAAbAAsAAQACAAYAAAAaAAsAAQACAAYAAAAZAAsAAQACAAYAAAAYAAsAAQACAAYAAAAXAAsAAQACAAYAAAAWAAsAAQACAAYAAAAVAAsAAQACAAYAAAAUAAsAAQACAAYAAAATAAsAAQACAAYAAAASAAsAAQACAAYAAAARAAsAAQACAAYAAAAQAAsAAQACAAYAAAAPAAsAAQACAAYAAAAOAAsAAQACAAYAAAANAAsAAQACAAYAAAAMAAsAAQACAAYAAAALAAsAAQACAAYAAAAKAAsAAQACAAYAAAAJAAsAAQACAAYAAAAIAAsAAQACAAYAAAAHAAsAAQACAAYAAAAGAAsAAQACAAYAAAAFAAsAAQACAAYAAAAEAAsAAQACAAYAAAADAAsAAQACAAYAAAACAAsAAQACAAYAAAABAAsAAQACAAYAAAAAAAsAAQACAAYAAAAeAAoAAQACAAYAAAAdAAoAAQACAAYAAAAcAAoAAQACAAYAAAAbAAoAAQACAAYAAAAaAAoAAQACAAYAAAAZAAoAAQACAAYAAAAYAAoAAQACAAYAAAAXAAoAAQACAAYAAAAWAAoAAQACAAYAAAAVAAoAAQACAAYAAAAUAAoAAQACAAYAAAATAAoAAQACAAYAAAASAAoAAQACAAYAAAARAAoAAQACAAYAAAAQAAoAAQACAAYAAAAPAAoAAQACAAYAAAAOAAoAAQACAAYAAAANAAoAAQACAAYAAAAMAAoAAQACAAYAAAALAAoAAQACAAYAAAAKAAoAAQACAAYAAAAJAAoAAQACAAYAAAAIAAoAAQACAAYAAAAHAAoAAQACAAYAAAAGAAoAAQACAAYAAAAFAAoAAQACAAYAAAAEAAoAAQACAAYAAAADAAoAAQACAAYAAAACAAoAAQACAAYAAAABAAoAAQACAAYAAAAAAAoAAQACAAYAAAAAAAkAAQACAAYAAAABAAkAAQACAAYAAAACAAkAAQACAAYAAAADAAkAAQACAAYAAAAEAAkAAQACAAYAAAAFAAkAAQACAAYAAAAGAAkAAQACAAYAAAAHAAkAAQACAAYAAAAIAAkAAQACAAYAAAAJAAkAAQACAAYAAAAKAAkAAQACAAYAAAALAAkAAQACAAYAAAAMAAkAAQACAAYAAAANAAkAAQACAAYAAAAOAAkAAQACAAYAAAAPAAkAAQACAAYAAAAQAAkAAQACAAYAAAARAAkAAQACAAYAAAASAAkAAQACAAYAAAATAAkAAQACAAYAAAAUAAkAAQACAAYAAAAVAAkAAQACAAYAAAAWAAkAAQACAAYAAAAXAAkAAQACAAYAAAAYAAkAAQACAAYAAAAZAAkAAQACAAYAAAAaAAkAAQACAAYAAAAbAAkAAQACAAYAAAAcAAkAAQACAAYAAAAdAAkAAQACAAYAAAAeAAkAAQACAAYAAAAeAA0AAQACAAYAAAAdAA0AAQACAAYAAAAcAA0AAQACAAYAAAAbAA0AAQACAAYAAAAaAA0AAQACAAYAAAAZAA0AAQACAAYAAAAYAA0AAQACAAYAAAAXAA0AAQACAAYAAAAWAA0AAQACAAYAAAAVAA0AAQACAAYAAAAUAA0AAQACAAYAAAATAA0AAQACAAYAAAASAA0AAQACAAYAAAARAA0AAQACAAYAAAAQAA0AAQACAAYAAAAPAA0AAQACAAYAAAAOAA0AAQACAAYAAAANAA0AAQACAAYAAAAMAA0AAQACAAYAAAALAA0AAQACAAYAAAAJAA0AAQACAAYAAAAKAA0AAQACAAYAAAAIAA0AAQACAAYAAAAHAA0AAQACAAYAAAAGAA0AAQACAAYAAAAFAA0AAQACAAYAAAAEAA0AAQACAAYAAAADAA0AAQACAAYAAAACAA0AAQACAAYAAAABAA0AAQACAAYAAAAAAA0AAQACAAYAAAAAAAMAAQABAAIAAAAAAAQAAQABAAIAAAAAAAUAAQABAAIAAAAAAAYAAQABAAIAAAAAAAcAAQABAAMAAAABAAMAAQABAAIAAAABAAQAAQABAAIAAAABAAUAAQABAAIAAAABAAYAAQABAAIAAAABAAcAAQABAAMAAAACAAMAAQABAAIAAAACAAQAAQABAAIAAAACAAUAAQABAAIAAAACAAYAAQABAAIAAAACAAcAAQABAAMAAAADAAMAAQABAAIAAAADAAQAAQABAAIAAAADAAUAAQABAAIAAAADAAYAAQABAAIAAAADAAcAAQABAAMAAAAEAAMAAQABAAIAAAAEAAQAAQABAAIAAAAEAAUAAQABAAIAAAAEAAYAAQABAAIAAAAEAAcAAQABAAMAAAAFAAMAAQABAAIAAAAFAAQAAQABAAIAAAAFAAUAAQABAAIAAAAFAAYAAQABAAIAAAAFAAcAAQABAAMAAAAGAAMAAQABAAIAAAAGAAQAAQABAAIAAAAGAAUAAQABAAIAAAAGAAYAAQABAAIAAAAGAAcAAQABAAMAAAAHAAMAAQABAAIAAAAHAAQAAQABAAIAAAAHAAUAAQABAAIAAAAHAAYAAQABAAIAAAAHAAcAAQABAAMAAAAIAAMAAQABAAIAAAAIAAQAAQABAAIAAAAIAAUAAQABAAIAAAAIAAYAAQABAAIAAAAIAAcAAQABAAMAAAAJAAMAAQABAAIAAAAJAAQAAQABAAIAAAAJAAUAAQABAAIAAAAJAAYAAQABAAIAAAAJAAcAAQABAAMAAAAKAAMAAQABAAIAAAAKAAQAAQABAAIAAAAKAAUAAQABAAIAAAAKAAYAAQABAAIAAAAKAAcAAQABAAMAAAALAAMAAQABAAIAAAALAAQAAQABAAIAAAALAAUAAQABAAIAAAALAAYAAQABAAIAAAALAAcAAQABAAMAAAAMAAMAAQABAAIAAAAMAAQAAQABAAIAAAAMAAUAAQABAAIAAAAMAAYAAQABAAIAAAAMAAcAAQABAAMAAAANAAMAAQABAAIAAAANAAQAAQABAAIAAAANAAUAAQABAAIAAAANAAYAAQABAAIAAAANAAcAAQABAAMAAAAOAAMAAQABAAIAAAAOAAQAAQABAAIAAAAOAAUAAQABAAIAAAAOAAYAAQABAAIAAAAOAAcAAQABAAMAAAAPAAMAAQABAAIAAAAPAAQAAQABAAIAAAAPAAUAAQABAAIAAAAPAAYAAQABAAIAAAAPAAcAAQABAAMAAAAQAAMAAQABAAIAAAAQAAQAAQABAAIAAAAQAAUAAQABAAIAAAAQAAYAAQABAAIAAAAQAAcAAQABAAMAAAARAAMAAQABAAIAAAARAAQAAQABAAIAAAARAAUAAQABAAIAAAARAAYAAQABAAIAAAARAAcAAQABAAMAAAASAAMAAQABAAIAAAASAAQAAQABAAIAAAASAAUAAQABAAIAAAASAAYAAQABAAIAAAASAAcAAQABAAMAAAATAAMAAQABAAIAAAATAAQAAQABAAIAAAATAAUAAQABAAIAAAATAAYAAQABAAIAAAATAAcAAQABAAMAAAAUAAMAAQABAAIAAAAUAAQAAQABAAIAAAAUAAUAAQABAAIAAAAUAAYAAQABAAIAAAAUAAcAAQABAAMAAAAVAAMAAQABAAIAAAAVAAQAAQABAAIAAAAVAAUAAQABAAIAAAAVAAYAAQABAAIAAAAVAAcAAQABAAMAAAAWAAMAAQABAAIAAAAWAAQAAQABAAIAAAAWAAUAAQABAAIAAAAWAAYAAQABAAIAAAAWAAcAAQABAAMAAAAXAAMAAQABAAIAAAAXAAQAAQABAAIAAAAXAAUAAQABAAIAAAAXAAYAAQABAAIAAAAXAAcAAQABAAMAAAAYAAMAAQABAAIAAAAYAAQAAQABAAIAAAAYAAUAAQABAAIAAAAYAAYAAQABAAIAAAAYAAcAAQABAAMAAAAZAAMAAQABAAIAAAAZAAQAAQABAAIAAAAZAAUAAQABAAIAAAAZAAYAAQABAAIAAAAZAAcAAQABAAMAAAAaAAMAAQABAAIAAAAaAAQAAQABAAIAAAAaAAUAAQABAAIAAAAaAAYAAQABAAIAAAAaAAcAAQABAAMAAAAbAAMAAQABAAIAAAAbAAQAAQABAAIAAAAbAAUAAQABAAIAAAAbAAYAAQABAAIAAAAbAAcAAQABAAMAAAAcAAMAAQABAAIAAAAcAAQAAQABAAIAAAAcAAUAAQABAAIAAAAcAAYAAQABAAIAAAAcAAcAAQABAAMAAAAdAAMAAQABAAIAAAAdAAQAAQABAAIAAAAdAAUAAQABAAIAAAAdAAYAAQABAAIAAAAdAAcAAQABAAMAAAAeAAMAAQABAAIAAAAeAAQAAQABAAIAAAAeAAUAAQABAAIAAAAeAAYAAQABAAIAAAAeAAcAAQABAAMAAAABAAgAAQAAAAAAAAAAAAgAAQAAAAAAAAACAAgAAQACAAAAAAADAAgAAQAAAAAAAAAEAAgAAQACAAAAAAAFAAgAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAgAAQABAAAAAAAIAAgAAQACAAAAAAAJAAgAAQACAAAAAAAKAAgAAQABAAAAAAALAAgAAQAAAAAAAAAMAAgAAQAAAAAAAAANAAgAAQABAAAAAAAOAAgAAQAAAAAAAAAPAAgAAQACAAAAAAAQAAgAAQAAAAAAAAARAAgAAQAAAAAAAAASAAgAAQAAAAAAAAATAAgAAQABAAAAAAAUAAgAAQACAAAAAAAVAAgAAQAAAAAAAAAWAAgAAQACAAAAAAAXAAgAAQACAAAAAAAYAAgAAQAAAAAAAAAZAAgAAQACAAAAAAAaAAgAAQAAAAAAAAAbAAgAAQAAAAAAAAAcAAgAAQACAAAAAAAdAAgAAQAAAAAAAAAeAAgAAQAAAAAAAAAAAAIAAQABAAIAAAABAAIAAQABAAIAAAACAAIAAQABAAIAAAADAAIAAQABAAIAAAAEAAIAAQABAAIAAAAFAAIAAQABAAIAAAAGAAIAAQABAAIAAAAHAAIAAQABAAIAAAAIAAIAAQABAAIAAAAJAAIAAQABAAIAAAAKAAIAAQABAAIAAAALAAIAAQABAAIAAAAMAAIAAQABAAIAAAANAAIAAQABAAIAAAAOAAIAAQABAAIAAAAPAAIAAQABAAIAAAAQAAIAAQABAAIAAAARAAIAAQABAAIAAAASAAIAAQABAAIAAAATAAIAAQABAAIAAAAUAAIAAQABAAIAAAAVAAIAAQABAAIAAAAWAAIAAQABAAIAAAAXAAIAAQABAAIAAAAYAAIAAQABAAIAAAAZAAIAAQABAAIAAAAaAAIAAQABAAIAAAAbAAIAAQABAAIAAAAcAAIAAQABAAIAAAAdAAIAAQABAAIAAAAeAAIAAQABAAIAAAAAAAEAAQABAAIAAAABAAEAAQABAAIAAAACAAEAAQABAAIAAAADAAEAAQABAAIAAAAEAAEAAQABAAIAAAAFAAEAAQABAAIAAAAGAAEAAQABAAIAAAAHAAEAAQABAAIAAAAIAAEAAQABAAIAAAAJAAEAAQABAAIAAAAKAAEAAQABAAIAAAALAAEAAQABAAIAAAAMAAEAAQABAAIAAAANAAEAAQABAAIAAAAOAAEAAQABAAIAAAAPAAEAAQABAAIAAAAQAAEAAQABAAIAAAARAAEAAQABAAIAAAASAAEAAQABAAIAAAATAAEAAQABAAIAAAAUAAEAAQABAAIAAAAVAAEAAQABAAIAAAAWAAEAAQABAAIAAAAXAAEAAQABAAIAAAAYAAEAAQABAAIAAAAZAAEAAQABAAIAAAAaAAEAAQABAAIAAAAbAAEAAQABAAIAAAAcAAEAAQABAAIAAAAdAAEAAQABAAIAAAAAAA4AAQACAAAAAAABAA4AAQACAAAAAAACAA4AAQABAAAAAAADAA4AAQAAAAAAAAAEAA4AAQAAAAAAAAAFAA4AAQABAAAAAAAGAA4AAQAAAAAAAAAHAA4AAQACAAAAAAAIAA4AAQACAAAAAAAJAA4AAQABAAAAAAAKAA4AAQAAAAAAAAALAA4AAQAAAAAAAAAMAA4AAQABAAAAAAANAA4AAQAAAAAAAAAOAA4AAQACAAAAAAAPAA4AAQACAAAAAAAQAA4AAQAAAAAAAAARAA4AAQACAAAAAAASAA4AAQAAAAAAAAATAA4AAQAAAAAAAAAUAA4AAQABAAAAAAAVAA4AAQABAAAAAAAWAA4AAQAAAAAAAAAXAA4AAQACAAAAAAAYAA4AAQAAAAAAAAAZAA4AAQAAAAAAAAAaAA4AAQAAAAAAAAAbAA4AAQAAAAAAAAAcAA4AAQACAAAAAAAdAA4AAQAAAAAAAAAeAA4AAQAAAAAAAAAAAAAAAQABAAEAAAABAAAAAQABAAEAAAACAAAAAQABAAEAAAADAAAAAQABAAEAAAAEAAAAAQABAAEAAAAFAAAAAQABAAEAAAAGAAAAAQABAAEAAAAHAAAAAQABAAEAAAAIAAAAAQABAAEAAAAJAAAAAQABAAEAAAAKAAAAAQABAAEAAAALAAAAAQABAAEAAAAMAAAAAQABAAEAAAANAAAAAQABAAEAAAAOAAAAAQABAAEAAAAPAAAAAQABAAEAAAAQAAAAAQABAAEAAAARAAAAAQABAAEAAAASAAAAAQABAAEAAAATAAAAAQABAAEAAAAUAAAAAQABAAEAAAAVAAAAAQABAAEAAAAWAAAAAQABAAEAAAAXAAAAAQABAAEAAAAYAAAAAQABAAEAAAAZAAAAAQABAAEAAAAaAAAAAQABAAEAAAAbAAAAAQABAAEAAAAcAAAAAQABAAEAAAAdAAAAAQABAAEAAAAeAAAAAQABAAEAAAAeAAEAAQABAAIAAAA=")
tile_set = SubResource("TileSet_feb5d")

[node name="Frog" parent="." instance=ExtResource("2_e2o6t")]
position = Vector2(224, 224)

[node name="Markers" type="Node" parent="."]
script = ExtResource("5_7jktm")

[node name="StartingPosition" type="Marker2D" parent="Markers"]
position = Vector2(248, 232)
gizmo_extents = 39.2

[node name="CarPos1" type="Marker2D" parent="Markers"]
position = Vector2(504, 184)
gizmo_extents = 8.0

[node name="CarPos2" type="Marker2D" parent="Markers"]
position = Vector2(504, 200)
gizmo_extents = 8.0

[node name="CarPos3" type="Marker2D" parent="Markers"]
position = Vector2(-8, 216)
gizmo_extents = 8.0

[node name="CarPos4" type="Marker2D" parent="Markers"]
position = Vector2(-8, 152)
gizmo_extents = 8.0

[node name="CarPos5" type="Marker2D" parent="Markers"]
position = Vector2(504, 168)
gizmo_extents = 8.0

[node name="LogPos1" type="Marker2D" parent="Markers"]
position = Vector2(504, 104)
gizmo_extents = 8.0

[node name="TurtlePos1" type="Marker2D" parent="Markers"]
position = Vector2(-8, 88)
gizmo_extents = 8.0

[node name="LogPos3" type="Marker2D" parent="Markers"]
position = Vector2(504, 72)
gizmo_extents = 8.0

[node name="TurtlePos2" type="Marker2D" parent="Markers"]
position = Vector2(-8, 56)
gizmo_extents = 8.0

[node name="LogPos4" type="Marker2D" parent="Markers"]
position = Vector2(504, 40)
gizmo_extents = 8.0

[node name="LilypadLane" type="Marker2D" parent="Markers"]
position = Vector2(-8, 24)

[node name="KillCarArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillCarArea"]
position = Vector2(-72, 123.5)
shape = SubResource("RectangleShape2D_7jktm")

[node name="KillCarArea2" type="Area2D" parent="."]
position = Vector2(632, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillCarArea2"]
position = Vector2(-56, 112)
shape = SubResource("RectangleShape2D_7jktm")

[node name="KillFrogArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillFrogArea"]
modulate = Color(0.145098, 0.117647, 1, 1)
position = Vector2(-14.5, 123)
shape = SubResource("RectangleShape2D_ryrav")

[node name="KillFrogArea2" type="Area2D" parent="."]
position = Vector2(528, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillFrogArea2"]
modulate = Color(0.145098, 0.117647, 1, 1)
position = Vector2(-16, 120)
shape = SubResource("RectangleShape2D_ryrav")

[node name="KillWaterArea" type="Area2D" parent="." groups=["water"]]
collision_priority = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillWaterArea"]
modulate = Color(0.757766, 0.578151, 1.92523e-07, 1)
position = Vector2(248, 55)
shape = SubResource("RectangleShape2D_eow3j")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("5_ryrav")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("6_ryrav")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("7_vef74")
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 80

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Life1" type="TextureRect" parent="UI/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_vef74")

[node name="Life2" type="TextureRect" parent="UI/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_vef74")

[node name="Life3" type="TextureRect" parent="UI/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_vef74")

[node name="PanelContainer3" type="PanelContainer" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Timer" type="Label" parent="UI/MarginContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2
text = "00"

[node name="LilypadContainer" type="HBoxContainer" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="ScoreContainer" type="PanelContainer" parent="UI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="Score" type="Label" parent="UI/MarginContainer/HBoxContainer/ScoreContainer"]
layout_mode = 2
text = "00"

[node name="LevelContainer" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -16.0
offset_right = 235.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_vef74")

[node name="LevelLabel" type="Label" parent="UI/LevelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level 1"

[node name="GameOverContainer" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -235.0
offset_top = -16.0
offset_right = 235.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_vef74")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverLabel" type="Label" parent="UI/GameOverContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Game Over"

[node name="RestartButton" type="Button" parent="UI/GameOverContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="PauseMenu" type="MarginContainer" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -33.0
offset_right = 35.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_vef74")

[node name="PauseContainer" type="VBoxContainer" parent="UI/PauseMenu"]
layout_mode = 2

[node name="Resume" type="Button" parent="UI/PauseMenu/PauseContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="UI/PauseMenu/PauseContainer"]
layout_mode = 2
text = "Restart"

[node name="SoundManager" type="Node" parent="."]

[node name="PointScored" type="AudioStreamPlayer2D" parent="SoundManager"]
stream = ExtResource("7_eow3j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hve3p")
}

[connection signal="body_entered" from="KillCarArea" to="." method="_on_kill_car_area_body_entered"]
[connection signal="body_entered" from="KillCarArea2" to="." method="_on_kill_car_area_2_body_entered"]
[connection signal="pressed" from="UI/GameOverContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PauseContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="UI/PauseMenu/PauseContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="finished" from="SoundManager/PointScored" to="." method="_on_point_scored_finished"]
